2010-08-31  Beth Dakin  <bdakin@apple.com>

        Reviewed by Dave Hyatt.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=44828 FrameView 
        should make more calls to postLayoutTasks() using the timer
        -and corresponding-
        <rdar://problem/8064938>

        * fast/events/change-overflow-on-overflow-change-expected.txt: Added.
        * fast/events/change-overflow-on-overflow-change.html: Added.

2010-08-31  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Sam Weinig.

        https://bugs.webkit.org/show_bug.cgi?id=42195
        <rdar://problem/8186761> WebKitTestRunner needs to support layoutTestController.setXSSAuditorEnabled

        * platform/mac-wk2/Skipped: Unskip XSS Auditor tests.

2010-08-31  Sam Weinig  <sam@webkit.org>

        Reviewed by Gavin Barraclough.

        WebKitTestRunner needs layoutTestController.addUserStyleSheet
        https://bugs.webkit.org/show_bug.cgi?id=42680

        WebKitTestRunner needs layoutTestController.addUserScript
        https://bugs.webkit.org/show_bug.cgi?id=42681

        * platform/mac-wk2/Skipped: Update skipped list.

2010-08-31  Tony Chang  <tony@chromium.org>

        Unreviewed, updating test_expectations.txt.

        * platform/chromium/test_expectations.txt:

2010-08-31  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Darin Adler.

        canPlayType("application/octet-stream") must return ""
        https://bugs.webkit.org/show_bug.cgi?id=44985

        * media/media-can-play-octet-stream-expected.txt:
        * media/media-can-play-octet-stream.html:

2010-08-31  Darin Adler  <darin@apple.com>

        Reviewed by Anders Carlsson.

        Web archives are created with a size of 0 due to PassRefPtr mistake
        https://bugs.webkit.org/show_bug.cgi?id=44984
        rdar://problem/8042283

        * webarchive/test-link-rel-icon-expected.webarchive: Expect a correct size, not 0.

2010-08-31  Jian Li  <jianli@chromium.org>

        Reviewed by David Levin.