@@ -1,3 +1,12 @@
+2010-08-31  Zhenyao Mo  <zmo@google.com>
+
+        Reviewed by Kenneth Russell.
+
+        gl-teximage.html and tex-image-and-sub-image-2d-with-image.html failed on Chromium Mac bots (10.5)
+        https://bugs.webkit.org/show_bug.cgi?id=44993
+
+        * platform/chromium/test_expectations.txt: Enabling the failing tests with the fix.
+
 2010-08-31  Beth Dakin  <bdakin@apple.com>
 
         Reviewed by Dave Hyatt.
